SERVER-32446 check if CSRS is initiated when reading isMaster response setName field